# cpp-hello-world

./: CMakeLists.txt  Dockerfile  HelloWorld.pro  README.md  main.cpp  setup-vs.ps1
.github/workflows/: auto_merge.yml  build.yml  ci.yml
